<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Строка 1: A, <<, >>, C, ⌫ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnA"
            style="@style/WP10TopButton"
            android:text="@string/btn_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShiftLeft"
            style="@style/WP10TopButton"
            android:text="@string/btn_shift_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShiftRight"
            style="@style/WP10TopButton"
            android:text="@string/btn_shift_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            style="@style/WP10TopButton"
            android:text="@string/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackspace"
            style="@style/WP10TopButton"
            android:text="@string/btn_backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Строка 2: B, (, ), %, ÷ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnB"
            style="@style/WP10TopButton"
            android:text="@string/btn_b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLeftParen"
            style="@style/WP10DigitButton"
            android:text="@string/btn_left_paren"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRightParen"
            style="@style/WP10DigitButton"
            android:text="@string/btn_right_paren"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPercent"
            style="@style/WP10DigitButton"
            android:text="@string/btn_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDivide"
            style="@style/WP10DigitButton"
            android:text="@string/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Строка 3: C (цифра), 7, 8, 9, × -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnC"
            style="@style/WP10TopButton"
            android:text="@string/btn_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            style="@style/WP10DigitButton"
            android:text="@string/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            style="@style/WP10DigitButton"
            android:text="@string/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            style="@style/WP10DigitButton"
            android:text="@string/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMultiply"
            style="@style/WP10DigitButton"
            android:text="@string/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Строка 4: D, 4, 5, 6, − -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnD"
            style="@style/WP10TopButton"
            android:text="@string/btn_d"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            style="@style/WP10DigitButton"
            android:text="@string/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            style="@style/WP10DigitButton"
            android:text="@string/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            style="@style/WP10DigitButton"
            android:text="@string/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubtract"
            style="@style/WP10DigitButton"
            android:text="@string/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Строка 5: E, 1, 2, 3, + -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnE"
            style="@style/WP10TopButton"
            android:text="@string/btn_e"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            style="@style/WP10DigitButton"
            android:text="@string/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            style="@style/WP10DigitButton"
            android:text="@string/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            style="@style/WP10DigitButton"
            android:text="@string/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/WP10DigitButton"
            android:text="@string/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Строка 6: F, ±, 0, ,, = -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnF"
            style="@style/WP10TopButton"
            android:text="@string/btn_f"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSign"
            style="@style/WP10DigitButton"
            android:text="@string/btn_sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            style="@style/WP10DigitButton"
            android:text="@string/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDot"
            style="@style/WP10DigitButton"
            android:text="@string/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEquals"
            style="@style/WP10DigitButton"
            android:text="@string/btn_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>